--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vuelidate/core": "^2.0.3",
+    "@vuelidate/validators": "^2.0.4",
+    "animate.css": "^4.1.1",
     "pinia": "^2.1.7",
     "vue": "^3.4.21",
-    "vue-router": "^4.3.0"
+    "vue-good-table-next": "^0.2.1",
+    "vue-i18n": "^9.12.1",
+    "vue-router": "^4.3.0",
+    "vue-sweetalert2": "^5.0.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
