--- a/package.json
+++ b/package.json
@@ -1,31 +1,28 @@
 {
-  "name": "vue-project",
-  "version": "0.0.0",
+  "name": "tailwindui-primer",
+  "version": "0.1.0",
   "private": true,
-  "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
+  "browserslist": "defaults, not ie <= 11",
   "dependencies": {
-    "@headlessui/vue": "^1.7.20",
-    "@heroicons/vue": "^2.1.3",
-    "@vuelidate/core": "^2.0.3",
-    "@vuelidate/validators": "^2.0.4",
-    "animate.css": "^4.1.1",
-    "pinia": "^2.1.7",
-    "vue": "^3.4.21",
-    "vue-good-table-next": "^0.2.1",
-    "vue-i18n": "^9.12.1",
-    "vue-router": "^4.3.0",
-    "vue-sweetalert2": "^5.0.5"
+    "@headlessui/react": "^2.1.0",
+    "autoprefixer": "^10.4.12",
+    "clsx": "^2.1.0",
+    "next": "^14.0.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^5.0.4",
-    "autoprefixer": "^10.4.19",
-    "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.3",
-    "vite": "^5.2.8"
+    "eslint": "^8.56.0",
+    "eslint-config-next": "^14.0.4",
+    "prettier": "^3.3.2",
+    "prettier-plugin-tailwindcss": "^0.6.5",
+    "sharp": "0.33.1"
   }
 }
