--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "famindex",
+  "name": "app-111",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -13,16 +13,23 @@
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
     "@reduxjs/toolkit": "^2.5.1",
-    "@tailwindcss/postcss": "^4.0.6",
+    "@tailwindcss/postcss": "^4.0.8",
+    "animate.css": "^4.1.1",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
-    "framer-motion": "^12.4.2",
-    "postcss": "^8.5.2",
+    "framer-motion": "^12.4.7",
+    "i18next": "^24.2.2",
+    "i18next-browser-languagedetector": "^8.0.4",
+    "i18next-http-backend": "^3.0.2",
+    "lucide-react": "^0.475.0",
+    "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-i18next": "^15.4.1",
     "react-redux": "^9.2.0",
-    "react-router": "^7.1.5",
-    "tailwindcss": "^4.0.6"
+    "react-router": "^7.2.0",
+    "sweetalert2": "^11.17.2",
+    "tailwindcss": "^4.0.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
