--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "app-3",
+  "name": "app-2",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -13,23 +13,24 @@
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
     "@reduxjs/toolkit": "^2.6.0",
-    "@tailwindcss/postcss": "^4.0.9",
+    "@tailwindcss/postcss": "^4.0.11",
     "animate.css": "^4.1.1",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
-    "framer-motion": "^12.4.7",
+    "framer-motion": "^12.4.10",
     "i18next": "^24.2.2",
     "i18next-browser-languagedetector": "^8.0.4",
     "i18next-http-backend": "^3.0.2",
-    "lucide-react": "^0.476.0",
+    "lucide-react": "^0.477.0",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-i18next": "^15.4.1",
     "react-redux": "^9.2.0",
-    "react-router": "^7.2.0",
+    "react-router-dom": "^7.3.0",
+    "recharts": "^2.15.1",
     "sweetalert2": "^11.17.2",
-    "tailwindcss": "^4.0.9"
+    "tailwindcss": "^4.0.11"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
